--- a/install
+++ b/install
@@ -32,6 +32,10 @@ while [[ "$1" != "" ]]; do
         -i|--install)
             MODE=1
             ;;
+        -v|--version)
+            shift
+            VERSION=$1
+            ;;
         -u|--uninstall)
             MODE=2
             ;;
@@ -50,8 +54,13 @@ if [[ -z ${MODE} ]]; then
     MODE=1
 fi
 
+if [[ ${MODE} -eq 1 ]] && [[ -z ${VERSION} ]]; then
+    echo "Error: version must be provided e.g. '--version v0.0.4'"
+    exit 1
+fi
+
 if [[ ${MODE} -eq 1 ]] && [[ "${WIPE}" ]]; then
-    echo "--wipe can be used with --uninstall only!"
+    echo "Error: --wipe can be used with --uninstall only!"
     exit 1
 fi
 
@@ -90,13 +99,13 @@ if [[ ${MODE} -eq 1 ]]; then
 
     COMPS="${LGR_CONFS} ${LGR_COMPS}";
     for comp in ${COMPS}; do
-        echo "Installing ${comp}..."
+        echo "Installing ${comp} ${VERSION}..."
         helm status ${comp} >/dev/null 2>&1
         if [[ $? -eq 0 ]]; then
             echo "Already installed, skipping..."
             continue
         fi
-        helm install logrange/${comp} --name ${comp} >/dev/null
+        helm install logrange/${comp} --name ${comp} --set args.version=${VERSION} >/dev/null
         check $?
     done
 
