--- a/install
+++ b/install
@@ -99,7 +99,7 @@ if [[ ${MODE} -eq 1 ]]; then
 
     COMPS="${LGR_CONFS} ${LGR_COMPS}";
     for comp in ${COMPS}; do
-        echo "Installing ${comp} ${VERSION}..."
+        echo "Installing ${comp} appVersion=${VERSION}..."
         helm status ${comp} >/dev/null 2>&1
         if [[ $? -eq 0 ]]; then
             echo "Already installed, skipping..."
