--- a/install
+++ b/install
@@ -16,13 +16,13 @@ function get_labeled_node() {
 function add_node_label() {
     node=$1
     label=$2
-    kubectl label nodes ${node} ${label}= >/dev/nul
+    kubectl label nodes ${node} ${label}= >/dev/null
 }
 
 function del_node_label() {
     node=$1
     label=$2
-    kubectl label nodes ${node} ${label}- >/dev/nul
+    kubectl label nodes ${node} ${label}- >/dev/null
 }
 
 ################# Main #################
