--- a/install
+++ b/install
@@ -36,6 +36,14 @@ while [[ "$1" != "" ]]; do
             shift
             VERSION=$1
             ;;
+        -n|--namespace)
+            shift
+            NAMESPACE=$1
+            ;;
+        -o|--options)
+            shift
+            OPTIONS=$1
+            ;;
         -u|--uninstall)
             MODE=2
             ;;
@@ -99,13 +107,16 @@ if [[ ${MODE} -eq 1 ]]; then
 
     COMPS="${LGR_CONFS} ${LGR_COMPS}";
     for comp in ${COMPS}; do
-        echo "Installing ${comp} appVersion=${VERSION}..."
+        opts=$(echo ${OPTIONS} | jq ".\"${comp}\" | select (.!=null)")
+        echo "Installing ${comp} appVersion=${VERSION} namespace=${NAMESPACE} options=${opts}..."
+
         helm status ${comp} >/dev/null 2>&1
         if [[ $? -eq 0 ]]; then
             echo "Already installed, skipping..."
             continue
         fi
-        helm install logrange/${comp} --name ${comp} --set args.version=${VERSION} >/dev/null
+        helm install logrange/${comp} --name ${comp} \
+            --set args.version=${VERSION},args.namespace=${NAMESPACE},${opts} >/dev/null
         check $?
     done
 
